--- a/StartUp/HelloWorld.html
+++ b/StartUp/HelloWorld.html
@@ -27,6 +27,7 @@
     <div id="app-5">
         <p>{{ message }}</p>
         <button v-on:click="reverseMessage">逆转消息</button>
+        <button></button>
     </div>
     <div id="app-6">
         <p>{{ message }}</p>
