--- a/模板语法/缩写.html
+++ b/模板语法/缩写.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>缩写</title>
+    <script src="../vue.js"></script>
 </head>
 <body>
+<!-- v-bind 缩写 -->
+<a v-bind:href="url"></a>
 
+
+<!-- v-on 缩写 -->
+<a :href="url"></a>
 </body>
 </html>
