--- a/Examples/数据与方法.html
+++ b/Examples/数据与方法.html
@@ -2,9 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>数据与方法</title>
+    <script src="../vue.js"></script>
 </head>
 <body>
+<div id="example"></div>
+<script>
+    // 数据对象
+    var data = { a: 1 }
 
+    // 该对象被加入到一个Vue实例中
+    var vm = new Vue({
+        data: data
+    })
+
+    vm.a === data.a // == true
+
+    // 设置属性也会影响到原始数据
+    vm.a = 2
+    console.log(data.a) // 2
+
+    //  ... 反之亦然
+    data.a = 3
+    console.log(vm.a) // 3
+
+    vm.$el === document.getElementById('example');
+    vm.$data = data
+
+    //  $watch 是一个实例方法
+    vm.$watch('a', function (newValue, oldValue) {
+        // 这个回调将在'vm.a'改变后调用
+    })
+
+</script>
 </body>
 </html>
